<resources>
    <string name="app_name">Melijo</string>
    <string name="development_key_label">Enter Development Key</string>
    <string name="submit">Submit</string>
    <string name="image_splashscreen">image splashscreen</string>
    <string name="logo">logo</string>
    <string name="press_to_continue">Press To Continue</string>
    <string name="choose_your_account">Choose Your Account</string>
    <string name="buyer">BUYER</string>
    <string name="seller">SELLER</string>
    <string name="supplier">SUPPLIER</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="icon">icon</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account? <u>Sign Up</u></string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="nama">Nama</string>
    <string name="no_hp">No. Hp</string>
    <string name="alamat">Alamat</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="input_cannot_empty">Input tidak boleh kosong</string>
    <string name="password_not_match">Password konfirmasi tidak cocok</string>
    <string name="beranda">Beranda</string>
    <string name="inbox">Inbox</string>
    <string name="akun">Akun</string>
    <string name="search_hint">cari produk</string>
    <string name="banner">banner</string>
    <string name="logout">Logout</string>
    <string name="jarak">Jarak</string>
    <string name="rating">Rating</string>
    <string name="user_location_permission_explanation">Izinkan aplikasi untuk menggunakan lokasi anda?</string>
    <string name="user_location_permission_not_granted">Penggunaan lokasi tidak diizinkan</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiYXJpZmFpemluIiwiYSI6ImNrYTI2c3R1cjAwNXAzbm1zaDYyZW1ra2cifQ.okSWF0zf58rWkhoVuYjShQ</string>
    <string name="promo_akhir_bulan">Promo akhir bulan</string>
    <string name="lihat"><u>Lihat</u></string>
    <string name="foto_seller">foto seller</string>
    <string name="goodsell">Goodsell</string>
    <string name="find_in_store">Cari di toko</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pembayaran"><u>Pembayaran</u></string>
    <string name="pesanan">Pesanan</string>
    <string name="name_buyer">Name Buyer</string>
    <string name="masukkan_alamat">Masukkan alamat...</string>
    <string name="daftar_promo">Daftar Promo</string>
    <string name="harga">Harga</string>
    <string name="ongkir">Biaya Admin</string>
    <string name="promo">Promo</string>
    <string name="total_pembayaran">Total Pembayaran (Tunai)</string>
    <string name="pesan">Pesan</string>
    <string name="zero_value">0</string>
    <string name="no_telp">No Telp.</string>
    <string name="ubah_profile">Ubah Profile</string>
    <string name="promo_not_availble">Promo tidak tersedia</string>
    <string name="dipilih">dipilih</string>
    <string name="batalkan_pesanan">Batalkan Pesanan</string>
    <string name="button_back">Kembali</string>
    <string name="add">Tambah</string>
    <string name="title_add_category">Tambah Kategory Barang</string>
    <string name="title_update_category">Update Kategory Barang</string>
    <string name="title_list_category">Daftar Kategori Barang</string>
    <string name="title_add_product">Tambah Barang Jualan</string>
    <string name="title_update_product">Update Barang Jualan</string>
    <string name="title_list_product">Daftar Barang Jualan</string>
    <string name="title_add_promo">Tambah Promo</string>
    <string name="title_update_promo">Update Promo</string>
    <string name="format_price">Rp. %s</string>
    <string name="cancel">Batal</string>
    <string name="save">Simpan</string>
    <string name="tidak_ada_pesan">Tidak ada pesan</string>
    <string name="text_image_product">Gambar Produk</string>
    <string name="text_choose_image">Pilih Gambar</string>
    <string name="choose_category">Pilih Kategori Barang</string>
    <string name="name_product">Nama Barang</string>
    <string name="price_product">Harga (Rp.)</string>
    <string name="stock_product">Stok</string>
    <string name="discount_product">Diskon (Rp.)</string>
    <string name="description_product">Deskripsi Produk</string>
    <string name="cari_di_toko">Cari di toko</string>
    <string name="kelola_akun">Kelola Penjualan</string>
    <string name="kelola_produk">Kelola Produk</string>
    <string name="kelola_kategori">Kelola Kategori</string>
    <string name="kelola_promo">Kelola Promo</string>
    <string name="name_promo">Nama Promo</string>
    <string name="desc_promo">Ketentuan Promo</string>
    <string name="discount_promo">Diskon Promo</string>
    <string name="status_all">All</string>
    <string name="in_process">in process</string>
    <string name="rb_status_done">Done</string>
    <string name="transaction_completed">Transaction\nCompleted</string>
    <string name="detail_pesanan">Detail Pesanan</string>
    <string name="status">Status</string>
</resources>