<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.mainprovider.home.ManageProducerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wrapper_search"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="?colorSecondaryVariant"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/icon"
            android:padding="4dp"
            android:src="@drawable/icon_backward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/kelola_akun"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_product"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/kelola_produk"
        android:background="@android:color/white"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/wrapper_search"/>

    <Button
        android:id="@+id/btn_kategori"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/kelola_kategori"
        android:background="@android:color/white"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_product"/>

    <Button
        android:id="@+id/btn_promo"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/kelola_promo"
        android:background="@android:color/white"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_kategori"/>
</androidx.constraintlayout.widget.ConstraintLayout>