<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:layout_marginHorizontal="16dp"
    android:padding="16dp"
    tools:context=".presentation.auth.RegisterFragment">

    <TextView
        android:id="@+id/label_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="?colorSecondary"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:inputType="textPersonName"
        android:background="@color/button_grey_color"
        android:hint="@string/username"
        android:textSize="13sp"
        android:maxLines="1"
        android:fontFamily="@font/poppins_regular"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/label_register"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:inputType="textEmailAddress"
        android:background="@color/button_grey_color"
        android:hint="@string/email"
        android:textSize="13sp"
        android:maxLines="1"
        android:fontFamily="@font/poppins_regular"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_username"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:inputType="textPersonName"
        android:background="@color/button_grey_color"
        android:hint="@string/nama"
        android:textSize="13sp"
        android:maxLines="1"
        android:fontFamily="@font/poppins_regular"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edt_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:inputType="phone"
        android:background="@color/button_grey_color"
        android:hint="@string/no_hp"
        android:textSize="13sp"
        android:maxLines="1"
        android:fontFamily="@font/poppins_regular"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_name"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edt_address"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:inputType="text"
        android:background="@color/button_grey_color"
        android:hint="@string/alamat"
        android:textSize="13sp"
        android:maxLines="1"
        android:fontFamily="@font/poppins_regular"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_phonenumber"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:inputType="textPassword"
        android:background="@color/button_grey_color"
        android:hint="@string/password"
        android:textSize="13sp"
        android:maxLines="1"
        android:fontFamily="@font/poppins_regular"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_address"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edt_password_confirmation"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:inputType="textPassword"
        android:background="@color/button_grey_color"
        android:hint="@string/password_confirmation"
        android:textSize="13sp"
        android:maxLines="1"
        android:fontFamily="@font/poppins_regular"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_registration"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="?colorSecondary"
        android:text="@string/register"
        android:textColor="@color/button_text_color"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toBottomOf="@+id/edt_password_confirmation"
        />
</androidx.constraintlayout.widget.ConstraintLayout>