<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.mainprovider.home.product.AddUpdateProductActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wrapper_back"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?colorSecondaryVariant"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/backToProducts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_back"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginVertical="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:drawableStartCompat="@drawable/icon_backward"
            android:drawablePadding="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wrap_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@id/wrapper_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:id="@+id/lineLeft"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_title"/>

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_add_product"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <View
            android:id="@+id/lineRight"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/text_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/input_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintWidth_percent=".9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wrap_title">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_product"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/icon_camera"
            android:background="#F1F1F1"
            android:padding="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_image_product"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_choose_image"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:layout_marginVertical="10dp"
                android:background="?colorSecondaryVariant"/>
        </LinearLayout>
    </LinearLayout>

    <Spinner
        android:id="@+id/chooseCategory"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/spinner_custom"
        android:textColor="@color/black"
        android:paddingHorizontal="8dp"
        app:layout_constraintWidth_percent=".6"
        app:layout_constraintHorizontal_bias=".1"
        app:layout_constraintVertical_bias=".05"
        app:layout_constraintTop_toBottomOf="@id/input_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/edtNameProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/name_product"
        app:layout_constraintVertical_bias=".05"
        app:layout_constraintWidth_percent=".9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseCategory"
        app:layout_constraintBottom_toBottomOf="parent"
        android:importantForAutofill="no" />

    <LinearLayout
        android:id="@+id/inputPriceStock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintVertical_bias=".05"
        app:layout_constraintWidth_percent=".9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtNameProduct"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/edtPriceProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:layout_marginEnd="4dp"
            android:hint="@string/price_product"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edtStockProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:layout_marginStart="4dp"
            android:hint="@string/stock_product"
            android:importantForAutofill="no"/>
    </LinearLayout>

    <EditText
        android:id="@+id/edtDiscountProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/discount_product"
        app:layout_constraintWidth_percent=".5"
        app:layout_constraintVertical_bias=".05"
        app:layout_constraintHorizontal_bias=".1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputPriceStock"
        app:layout_constraintBottom_toBottomOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edtDescriptionProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/description_product"
        app:layout_constraintWidth_percent=".9"
        app:layout_constraintVertical_bias=".05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtDiscountProduct"
        app:layout_constraintBottom_toBottomOf="parent"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@color/red"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_save"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="?colorSecondaryVariant"
        android:text="@string/save"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>